src/test/deca/syntax/valid/improvided/while.deca
// Description :
// 	test du condition while
// Resultats :
// 	ok
{
	while(true){
		println("sana");
	}
}
