src/test/deca/syntax/invalid/improvided/string_quote.deca
// Description :
// 	test quote a l'interieur d'un string
// Resultats :
// 	Ligne 7 :

{
	println("testwtst""testhhbef");
}
